[gd_scene load_steps=33 format=2]

[ext_resource path="res://Player/Player3D/Doll3D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/StageScene3D/BaseStageScene3D.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Props/platform.png" type="Texture" id=3]
[ext_resource path="res://Modules/HypnokinkModule/StageScenes/HK_ArmsRaisedSex.gd" type="Script" id=4]

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "HangingSexFast_1-loop"

[sub_resource type="AnimationNodeAnimation" id=42]
animation = "HangingSexTease_1-loop"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "HangingSexTease_1-loop"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "HangingSex_1-loop"

[sub_resource type="AnimationNodeStateMachineTransition" id=29]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=30]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=43]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=44]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=45]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=46]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachine" id=31]
states/HangingSexFast_1-loop/node = SubResource( 24 )
states/HangingSexFast_1-loop/position = Vector2( 442, 246 )
states/HangingSexInside_1-loop/node = SubResource( 42 )
states/HangingSexInside_1-loop/position = Vector2( 458, 49 )
states/HangingSexTease_1-loop/node = SubResource( 25 )
states/HangingSexTease_1-loop/position = Vector2( 469, -44 )
states/HangingSex_1-loop/node = SubResource( 26 )
states/HangingSex_1-loop/position = Vector2( 430, 162 )
transitions = [ "HangingSex_1-loop", "HangingSexFast_1-loop", SubResource( 29 ), "HangingSexFast_1-loop", "HangingSex_1-loop", SubResource( 30 ), "HangingSexTease_1-loop", "HangingSexInside_1-loop", SubResource( 43 ), "HangingSexInside_1-loop", "HangingSexTease_1-loop", SubResource( 44 ), "HangingSexInside_1-loop", "HangingSex_1-loop", SubResource( 45 ), "HangingSex_1-loop", "HangingSexInside_1-loop", SubResource( 46 ) ]
start_node = "HangingSexTease_1-loop"
graph_offset = Vector2( -102, -191 )

[sub_resource type="AnimationNodeBlendTree" id=32]
graph_offset = Vector2( -29.1464, 71.9675 )
nodes/StateMachine/node = SubResource( 31 )
nodes/StateMachine/position = Vector2( 301.179, 143.258 )
nodes/output/position = Vector2( 680, 180 )
node_connections = [ "output", 0, "StateMachine" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=22]

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "CuffedArms-loop"

[sub_resource type="AnimationNodeBlend2" id=4]
filter_enabled = true
filters = [ "Doll3D/Skeleton:Arm.L", "Doll3D/Skeleton:Arm.R", "Doll3D/Skeleton:ForeArm.L", "Doll3D/Skeleton:ForeArm.R", "Doll3D/Skeleton:Hand.L", "Doll3D/Skeleton:Hand.R" ]

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "HangingSexFast_2-loop"

[sub_resource type="AnimationNodeAnimation" id=47]
animation = "HangingSexInside_2-loop"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "HangingSexTease_2-loop"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "HangingSex_2-loop"

[sub_resource type="AnimationNodeStateMachineTransition" id=38]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=39]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=48]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=49]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=50]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=51]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachine" id=40]
states/HangingSexFast_2-loop/node = SubResource( 33 )
states/HangingSexFast_2-loop/position = Vector2( 344, 203 )
states/HangingSexInside_2-loop/node = SubResource( 47 )
states/HangingSexInside_2-loop/position = Vector2( 324, 72 )
states/HangingSexTease_2-loop/node = SubResource( 34 )
states/HangingSexTease_2-loop/position = Vector2( 324, -2 )
states/HangingSex_2-loop/node = SubResource( 35 )
states/HangingSex_2-loop/position = Vector2( 324, 137 )
transitions = [ "HangingSex_2-loop", "HangingSexFast_2-loop", SubResource( 38 ), "HangingSexFast_2-loop", "HangingSex_2-loop", SubResource( 39 ), "HangingSexTease_2-loop", "HangingSexInside_2-loop", SubResource( 48 ), "HangingSexInside_2-loop", "HangingSexTease_2-loop", SubResource( 49 ), "HangingSex_2-loop", "HangingSexInside_2-loop", SubResource( 50 ), "HangingSexInside_2-loop", "HangingSex_2-loop", SubResource( 51 ) ]
start_node = "HangingSexTease_2-loop"
graph_offset = Vector2( -80, -150 )

[sub_resource type="AnimationNodeBlendTree" id=41]
graph_offset = Vector2( -210.938, 145.651 )
nodes/Animation/node = SubResource( 3 )
nodes/Animation/position = Vector2( 140, 280 )
nodes/CuffsBlend/node = SubResource( 4 )
nodes/CuffsBlend/position = Vector2( 440, 160 )
nodes/StateMachine/node = SubResource( 40 )
nodes/StateMachine/position = Vector2( 140, 120 )
nodes/output/position = Vector2( 680, 180 )
node_connections = [ "CuffsBlend", 0, "StateMachine", "CuffsBlend", 1, "Animation", "output", 0, "CuffsBlend" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=23]

[node name="HangingSex" instance=ExtResource( 2 )]
script = ExtResource( 4 )

[node name="Sprite3D" type="Sprite3D" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.196641, -1.77462 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 1, 1, 1022, 62 )

[node name="Doll3D" parent="." index="1" instance=ExtResource( 1 )]

[node name="Doll3D2" parent="." index="2" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.1 )

[node name="AnimationTree" type="AnimationTree" parent="." index="3"]
tree_root = SubResource( 32 )
anim_player = NodePath("../Doll3D/DollSkeleton/AnimationPlayer")
parameters/StateMachine/playback = SubResource( 22 )

[node name="AnimationTree2" type="AnimationTree" parent="." index="4"]
tree_root = SubResource( 41 )
anim_player = NodePath("../Doll3D2/DollSkeleton/AnimationPlayer")
parameters/CuffsBlend/blend_amount = 0
parameters/StateMachine/playback = SubResource( 23 )

[editable path="Doll3D"]
[editable path="Doll3D/DollSkeleton"]
[editable path="Doll3D2"]
[editable path="Doll3D2/DollSkeleton"]
